Prevented page from jumping to top on zoom button click.

--- a/app/assets/stylesheets/common/_markus.scss
+++ b/app/assets/stylesheets/common/_markus.scss
@@ -1376,11 +1376,12 @@ canvas {
   margin-right: 3px;
   max-width: 80%;
   overflow-x: auto;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 .exam-crop-container {
   display: flex;
+  height: 600px;
   width: 500px;
 }
 
